# wallpaper-aligner

./: Cargo.toml
.github/workflows/: release.yml
src/: display.rs  main.rs
